# pyprojects

./: .gitignore  readme.md
algorithms/: pyproject.toml  readme.md
algorithms/src/algorithms/: __init__.py  algorithms.py  insertion_sort.py  merge_sort.py
algorithms/tests/: test_algorithms.py
data_structures/: pyproject.toml  readme.md
data_structures/src/data_structures/: __init__.py  linked_list.py  linkedlist.py
data_structures/tests/: test_linkedlist.py
dsa_assignments/: makefile  pyproject.toml  readme.md
dsa_assignments/assignments/: assignment_1.ipynb  assignment_2.ipynb  assignment_3.ipynb  assignment_4.ipynb  assignment_5.ipynb  assignment_6_solutions.ipynb
dsa_assignments/lib/: linkedlists.py  trees.py
interview_questions/drone_delivery/: makefile  pyproject.toml  readme.md
interview_questions/drone_delivery/src/drone_delivery/: __init__.py  drone_delivery.py
interview_questions/drone_delivery/tests/: test_drone_delivery.py
interview_questions/tetris/: pyproject.toml  solution.py
lsm_tree/: .gitignore  USAGE.md  WARP.md  pyproject.toml  pyrightconfig.json  ruff.toml
lsm_tree/.warp/workflows/: ai-bootstrap.yaml  regenerate-docs.yaml  run-agent.yaml  run-tests.yaml
lsm_tree/ai/: agent.py  agent_config.yaml  run_agent.sh
lsm_tree/ai/prompts/: system.md
lsm_tree/demo/: FEATURES.md  QUICKSTART.md  README.md  __init__.py  demo.tape  lsm_demo_driver.py  lsm_live_visualizer.py  run_demo.sh
lsm_tree/docs/: async_compaction.md  async_implementation_summary.md  async_lsm_store_plan.md  demo_visualization.md  lsm_api_spec.md  lsm_requirements.md  presentation_outline.md  sequencing_plan.md  simple_async_writes.md
lsm_tree/src/lsm_tree/: __init__.py
lsm_tree/src/lsm_tree/components/: __init__.py  bloom.py  catalog.py  compaction.py  index.py  memtable.py  sstable.py  wal.py
lsm_tree/src/lsm_tree/core/: __init__.py  async_store.py  config.py  errors.py  store.py  types.py
lsm_tree/src/lsm_tree/interfaces/: __init__.py  bloom.py  catalog.py  index.py  memtable.py  sstable.py  store.py  wal.py
lsm_tree/tests/: test_integration.py  test_lsm_integration.py  test_memtable.py  test_smoke.py  test_sstable.py  test_wal.py
lsm_tree/tests/integration/: test_lsm_integration.py
lsm_tree/tests/performance/: test_benchmarks.py
lsm_tree/tests/unit/: test_async_store.py  test_bloom.py  test_memtable.py  test_wal.py
lsm_tree/tools/config/: coding_standards.md
lsm_tree/tools/scripts/: bootstrap.sh  gen_docs.sh  run_tests.sh  validate_implementation.sh
poisson/: pyproject.toml  readme.md
poisson/src/poisson/: __init__.py  core.py
poisson/tests/: test_poisson.py
resume-generator/: AI.md  PROJECT_PLAN.md  pyproject.toml
resume-generator/src/resume_generator/: __init__.py
resume-generator/src/resume_generator/cli/: main.py
resume-generator/src/resume_generator/core/: loader.py  model.py
resume-generator/src/resume_generator/render/: html_renderer.py
resume-generator/src/resume_generator/templates/harvard/: base.html.j2
resume-generator/tests/fixtures/: example_resume.toml
snippets/: makefile  pyproject.toml  readme.md
snippets/src/snippets/: exponential_backoff.py
snippets/tests/: test_exponential_backoff.py
