[project]
name = "data-structures"
version = "0.1.0"
description = "A simple library of common data structures. Mostly used for educational purposes."
readme = "readme.md"
authors = [
    { name = "Reza Rajan", email = "28660160+rezarajan@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
