[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsm-tree"
version = "0.1.0"
description = "LSM Tree Python implementation (docs-driven, agent-enabled)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "LSM Tree Project" }]
license = { text = "MIT" }
keywords = ["lsm", "storage", "database", "warp", "agent"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pyyaml>=6.0",
  "sortedcontainers>=2.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
