[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsm-tree"
version = "0.1.0"
description = "LSM Tree Python implementation (docs-driven, agent-enabled)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "LSM Tree Project" }]
license = { text = "MIT" }
keywords = ["lsm", "storage", "database", "warp", "agent"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "matplotlib>=3.10.7",
  "pyyaml>=6.0",
  "sortedcontainers>=2.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "N",  # pep8-naming
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "TRY003", # long exception messages (acceptable for simple errors)
    "PERF203", # try-except in loop (necessary for error handling)
    "S311", # pseudo-random generators (acceptable for tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",   # assert statements ok in tests
    "S311",   # pseudo-random generators ok in tests
    "PLR2004", # magic values ok in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
